[package]
name = "matricks"
version = "0.2.0-alpha.2"
edition = "2021"
authors = ["Will McGloughlin <willem.mcg@gmail.com>"]
license = "MIT"
description = "An extensible LED matrix control tool for Raspberry Pis"
readme = "README.md"
homepage = "https://github.com/wymcg/matricks"
repository = "https://github.com/wymcg/matricks"
keywords = ["cli", "ws281x", "raspberrypi", "wasm"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
regex = "1.7.3"
glob = "0.3.1"
extism = "0.3.0"
serde = "1.0.159"
serde_json = "1.0.95"
matricks_plugin = "0.1.4"

[target.'cfg(target_arch = "aarch64")'.dependencies]
rs_ws281x = "0.4.4"

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
opencv = "0.79.0"
