[package]
name = "matricks"
version = "0.3.2-alpha.6"
edition = "2021"
authors = ["Will McGloughlin <willem.mcg@gmail.com>"]
license = "MIT"
description = "An extensible LED matrix control tool for Raspberry Pis"
readme = "README.md"
homepage = "https://github.com/wymcg/matricks"
repository = "https://github.com/wymcg/matricks"
keywords = ["cli", "ws281x", "raspberrypi", "wasm"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
regex = "1.10.2"
glob = "0.3.1"
extism = "0.5.2"
serde = "1.0.190"
serde_json = "1.0.107"
toml = "0.8.4"
rs_ws281x = "0.4.4"
env_logger = "0.10.0"
log = "0.4.20"
