[package]
name = "example_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "0.3.3"
matricks_plugin = "0.1.3"
serde_json = "1.0.96"
lazy_static = "1.4.0"